[package]
name = "bilibili_msg_history"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
