[package]
name = "bilibili_msg_history"
version = "0.0.4"
edition = "2021"
authors = ["hjkl1"]
license = "MIT OR Apache-2.0"
description = "哔哩哔哩聊天记录获取工具"
homepage = "https://github.com/hjklchan/bilibili_message_history"
repository = "https://github.com/hjklchan/bilibili_message_history"
keywords = ["cli", "messages", "bilibili"]

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
